--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.17.1",
+    "html-to-react": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-social-media-embed": "^2.3.4",
+    "react-spotify-web-playback": "^0.12.1",
+    "react-twitch-embed": "^3.0.1",
+    "react-twitter-embed": "^4.0.4",
     "sass": "^1.58.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
